--- a/src/vs/workbench/contrib/aideAgent/browser/media/aideAgent.css
+++ b/src/vs/workbench/contrib/aideAgent/browser/media/aideAgent.css
@@ -155,15 +155,17 @@
 	font-size: 14px;
 }
 
+/*
 .monaco-list-row:not(.focused) .aideagent-item-container:not(:hover) .header .monaco-toolbar,
 .monaco-list:not(:focus-within) .monaco-list-row .aideagent-item-container:not(:hover) .header .monaco-toolbar,
 .monaco-list-row:not(.focused) .aideagent-item-container:not(:hover) .header .monaco-toolbar .action-label,
 .monaco-list:not(:focus-within) .monaco-list-row .aideagent-item-container:not(:hover) .header .monaco-toolbar .action-label {
 	/* Also apply this rule to the .action-label directly to work around a strange issue- when the
 	toolbar is hidden without that second rule, tabbing from the list container into a list item doesn't work
-	and the tab key doesn't do anything. */
+	and the tab key doesn't do anything. *\/
 	display: none;
 }
+*/
 
 .aideagent-item-container .header .monaco-toolbar .monaco-action-bar .actions-container {
 	gap: 4px;
